	- macosx: remove compile nits.
	- dirty hacks to handle neon-0.26.0.
	- make rpmps internals opaque.
	- make rpmdb internals opaque.
	- fix: hGetNEVRA segfault if missing arch tag (i.e. pubkeys).
	- updated RU man pages (#185260).
	- fix: tag sort is stable iff identical prefixes, nuke RPMTAG_D alias.
	- add :yaml query format extension.
	- fix: segfault brain fart with query format extension.

4.4.4 -> 4.4.5:
	- nolibio: reopen FD_t to insure attached FILE * reading manifests.
	- rollback: insure that rpmtsRollback excluded tid is correct.
	- rollback: don't bother erasing rollback repackages, just don't create.
	- fix: solaris d->d_reclen is unreliable in certain cases (#128593).
	- fix: perldeps and prov.pl not to emit perl(main) (#177960)
	- build against FC5t2+.
	- irix: avoid NULL environ segfault with non-gcc sgi compiler (#178133).
	- ppc: detect certain cpu's as "ppc", not "ppciseries" (#128604).
	- rollback: make default configuration opt-out rather than opt-in.
	- build against sqlite-3.3.3.
	- build against neon-0.25.5.
	- rollback: revert opt-out config, not ready for prime time yet.
	- debuginfo: follow symlinks when copying source files (#149113).
	- lua: don't link -lreadline and -lhistory (#147013).
	- add tweaks to permit building in subdir, more to do yet (#81196).
	- fix: don't process package manifest if HTML is found (#75774).
	- fix: teach GNUconfigure about configure.[ac][in] (#170961).
	- fix: insure that netsharedpath basename contains no '/' (#52725).
	- popt: handle POPT_ARGFLAG_OPTIONAL correctly (#71147).
	- python: doco strings for te.{Depth,Breadth}.
	- upgrade to db-4.4.20.
	- handle trailing delimiters in rpmvercmp more carefully (#178798).
	- remove sqlite from the rpm-4_4 branch.
	- encapsulate mounted file system handling in fs.[ch].
	- sum package file sizes into uint_64 accumulator for fssizes.
	- fix: skip mount points with ESTALE return from stat(2).
	- handle files up to 4Gb in packages.