@@ -577,6 +577,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Tue Mar 21 2006 Jeff Johnson <jbj@jbj.org> 4.4.6-0.8
+- start making rpmRelocation opaque.
+
 * Mon Mar 20 2006 Jeff Johnson <jbj@jbj.org> 4.4.6-0.7
 - fix: segfault brain fart with query format extension.
 
