@@ -10,6 +10,7 @@
 	- fix: tag sort is stable iff identical prefixes, nuke RPMTAG_D alias.
 	- add :yaml query format extension.
 	- fix: segfault brain fart with query format extension.
+	- start making rpmRelocation opaque.
 
 4.4.4 -> 4.4.5:
 	- nolibio: reopen FD_t to insure attached FILE * reading manifests.
